<resources>
    <string name="app_name">HealthcareAppPD</string> <!-- Hoặc My_Project, chọn một cái -->
    <string name="title_home">Trang chủ</string>
    <string name="title_profile">Hồ sơ</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_report">Báo cáo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    login-->
    <string name="title_auth">Đăng ký tài khoản</string>
    <string name="name">Họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="clause">I agree to the healthcare Terms of Service and Privacy Policy</string>
    <string name="button_auth">Đăng ký</string>
    <string name="b_n_c_t_i_kho_n">Bạn đã có tài khoản?</string>
    <string name="button_login">Đăng nhập</string>
    <string name="avatar">avatar</string>
    <string name="greeting">Xin chào!</string>
    <string name="search_placeholder">Tìm kiếm thông tin về bác sĩ, bài báo, cơ sở y tế,...</string>
    <string name="todo">TODO</string>
    <string name="list_docter">Danh sách bác sỹ</string>
    <string name="hospital">Cơ sở ý tế</string>
    <string name="article">Bài viết sức khỏe</string>
    <string name="health_record">Hồ sơ sức khỏe</string>
    <string name="Heart_rate">Nhịp tim</string>
    <string name="Steps">Bước</string>
    <string name="Sleeping_time">Thời gian ngủ</string>
    <string name="phone">Số điện thoại</string>
    <string name="confirmPassword">Xác nhận mật khẩu</string>
    <string name="title_login">Đăng nhập</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="signup">Đăng ký</string>
    <string name="b_n_ch_a_c_t_i_kho_n">Bạn chưa có tài khoản?</string>
    <string name="or_login">OR</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="skip">Skip</string>
    <string name="back_button">Quay lại</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="add">add</string>
</resources>
