<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="16dp">

        <ImageView
            android:background="@color/teal_200"
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_profile"
            android:scaleType="centerCrop"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" />

        <!-- Text chào -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/avatar"
            android:layout_marginStart="12dp"
            android:layout_alignTop="@id/avatar">

            <TextView
                android:text="@string/greeting"

                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <TextView
                android:text="@string/name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

    </RelativeLayout>

    <!-- Search box -->

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search_placeholder"
        android:inputType="text"
        android:padding="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_doctor"
                app:tint="@color/royalblue" />
            <TextView
                android:text="@string/list_docter"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_location_on_24"
                app:tint="@color/royalblue" />
            <TextView
                android:text="@string/hospital"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Health Article Section -->
    <TextView
        android:text="@string/article"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerArticles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
