<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.healthcareapppd.presentation.ui.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_home_to_docter"
            app:destination="@id/navigation_docter" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.healthcareapppd.presentation.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.healthcareapppd.presentation.ui.Notification.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.healthcareapppd.presentation.ui.Report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report">

        <action
            android:id="@+id/action_reportFragment_to_bmiCalculatorFragment"
            app:destination="@id/bmiCalculatorFragment" />

    </fragment>

    <fragment
        android:id="@+id/bmiCalculatorFragment"
        android:name="com.example.healthcareapppd.presentation.ui.bmi.BmiCalculatorFragment"
        android:label="BMI Calculator"
        tools:layout="@layout/fragment_bmi_calculator" />

    <fragment
        android:id="@+id/navigation_docter"
        android:name="com.example.healthcareapppd.presentation.ui.Docter.DocterFragment"
        android:label="Doctor"
        tools:layout="@layout/docter_ffragment_item_list" >

        <action
            android:id="@+id/action_docter_to_home"
            app:destination="@id/navigation_home" />

    </fragment>

</navigation>