<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/RoundedTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/RoundedTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/forgotPassword"
        android:textSize="20sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_login"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/signupLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_n_ch_a_c_t_i_kho_n"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dividerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/or_login"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/light_gray"
        app:icon="@drawable/ic_google"
        app:iconGravity="start"
        app:iconSize="24sp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/dividerLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/light_gray"
        app:icon="@drawable/ic_facebook"
        app:iconGravity="start"
        app:iconSize="24sp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
